<resources>
    <string name="app_name">Test2</string>
    <string name="Register">Register</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="Login">Login</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to register</string>
    <string name="Logout">Logout</string>
    <string name="share_my_location">Share my location</string>
    <string name="view_others_locations">View others locations</string>
    <string name="enter_your_location">Enter your location</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="Submit">Submit</string>
    <string name="your_name">Your name</string>
    <string name="Settings">Settings</string>
    <string name="show_my_location">Show My Location</string>
    <string name="save">Save</string>
    <string name="search_in_the_map">Search in the map</string>
    <string name="back">Back</string>
    <string name="confirm">Confirm</string>
    <string name="skip_to_the_map">Skip to the map</string>
    <string name="change_my_location">Change my location</string>
    <string name="show_my_location_2">Show my location</string>
    <string name="satellite_map">Satellite map</string>
    <string name="use_current_location">Use current location</string>
    <string name="get_current_location">Get current location</string>
    <string name="new_to_locshare_register_here">New to LocShare? Register here</string>
    <string name="email_2">Email</string>
    <string name="password_2">Password</string>
    <string name="welcome">Welcome!</string>
    <string name="new_to_locshare">New to LocShare?</string>
    <string name="register_here">Register Here!</string>
    <string name="if_you_have_any_questions_nplease_contact_us_locshare_gmail_com">If you have any questions, \nplease contact us \'LocShare@gmail.com\'</string>
    <string name="click_to_login_2">Click to login.</string>
    <string name="latitude_2">Latitude</string>
    <string name="longitude_2">Longitude</string>
</resources>