<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LocationChoiceActivity"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_locShare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_my_location" />

    <Button
        android:id="@+id/btn_locView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_others_locations" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Logout" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="263dp"
        android:layout_height="203dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="80dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="-100dp"
        android:orientation="vertical"
        app:srcCompat="@drawable/party" />
</LinearLayout>


    <!-- Footer Start -->
