<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:background="#ffffff">
        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:background="@layout/header_gradient"
            android:paddingTop="5dip"
            android:paddingBottom="5dip"
            android:orientation="horizontal"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity"
            android:gravity="center"
            android:padding="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="130dp"
                android:fontFamily="casual"
                android:gravity="center"
                android:text="@string/welcome"
                android:textAllCaps="false"
                android:textColor="#006698"
                android:textSize="60sp"
                android:textStyle="bold"
                android:letterSpacing="0.05"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/email_edit_text_bg"
                android:elevation="8dp"
                android:hint="@string/email_2"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="16dp"
                android:textColor="@android:color/black"
                android:textColorHint="#676767"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/email_edit_text_bg"
                android:elevation="8dp"
                android:hint="@string/password_2"
                android:textColorHint="#676767"
                android:maxLines="1"
                android:padding="16dp"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_marginTop="24dp"
                android:backgroundTint="#006698"
                android:fontFamily="casual"
                android:text="@string/Login"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password" />

            <!-- 第一部分文本 -->
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="casual"
                android:text="@string/new_to_locshare"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_login" />

            <!-- 第二部分文本，即问号及后面的内容 -->
            <TextView
                android:id="@+id/registerNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/register_here"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <!-- Footer Start -->
        </androidx.constraintlayout.widget.ConstraintLayout>
        <LinearLayout android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="130dip"
            android:layout_alignParentBottom="true"
            android:background="@drawable/flower"
            android:orientation="vertical" >
        </LinearLayout>
        <!-- Footer Ends -->


    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>