<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:background="#ffffff">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:background="@layout/header_gradient"
            android:paddingTop="5dip"
            android:paddingBottom="5dip">

        </LinearLayout>

        <LinearLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".RegisterActivity"
            android:gravity="center"
            android:padding="15dp"
            android:orientation="vertical">

            <TextView
                android:text="@string/Register"
                android:textSize="25sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:hint="@string/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:hint="@string/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_register"
                android:text="@string/Register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:id="@+id/loginNow"
                android:text="@string/click_to_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:text="If you have any questions, \nplease contact us 'LocShare@gmail.com'"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>
        <!-- Footer Start -->
        <LinearLayout android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="130dip"
            android:layout_alignParentBottom="true"
            android:background="@drawable/flower"
            android:orientation="vertical" >
        </LinearLayout>
        <!-- Footer Ends -->
    </RelativeLayout>
</ScrollView>